--- a/dcgan_tutorial.ipynb
+++ b/dcgan_tutorial.ipynb
@@ -265,7 +265,7 @@
       "source": [
         "### Load and prepare the dataset\n",
         "\n",
-        "MNIST 데이터셋을 이용하여 Generator와 Discriminator를 학습시켜봅시다. 학습이 끝나면 Generator는 MNIST 데이터를 닮은handwritten 숫자들을 생성할 것입니다.\n",
+        "MNIST 데이터셋을 이용하여 Generator와 Discriminator를 학습시켜봅시다. 학습이 끝나면 Generator는 MNIST 데이터를 닮은 handwritten 숫자들을 생성할 것입니다.\n",
         "\n",
         "주어진 정보들을 이용하여 빈 칸을 채워보세요! ([    ]가 빈 칸을 나타냅니다. 괄호를 지우고 알맞은 코드를 써주세요)\n",
         "\n",
@@ -384,8 +384,8 @@
         "\n",
         "    model.add(layers.Conv2DTranspose([    ], ([     ]), strides=([     ]), padding='same', use_bias=False)) # 빈칸을 채워주세요\n",
         "    assert model.output_shape == (None, 14, 14, 64)\n",
-        "    model.add(layers.BatchNormalization())\n",
-        "    model.add(layers.LeakyReLU())\n",
+        "    model.add(layers.[       ]() # 빈칸을 채워주세요\n",
+        "    model.add(layers.[       ]())# 빈칸을 채워주세요\n",
         "\n",
         "    model.add(layers.Conv2DTranspose([     ], ([     ]), strides=([      ]), padding='same', use_bias=False, activation='tanh')) # 빈칸을 채워주세요\n",
         "    assert model.output_shape == (None, 28, 28, 1)\n",
