--- a/dcgan_tutorial.ipynb
+++ b/dcgan_tutorial.ipynb
@@ -587,7 +587,7 @@
       },
       "source": [
         "Discriminator와 Generator는 각각 학습되기 때문에 다른 optimizer를 정의해주어야합니다.\n",
-        "1. 두 개의 optimizer를 각각 Adam Optimizer를 learning rate 1e-4로 정의해줍시다. ( Hint: tf.keras.optimizer.Adam(*learning_rate*))"
+        "1. 두 개의 optimizer를 각각 Adam Optimizer를 learning rate 1e-4로 정의해줍시다. ( Hint: tf.keras.optimizers.Adam(*learning_rate*))"
       ]
     },
     {
