--- a/dcgan_tutorial.ipynb
+++ b/dcgan_tutorial.ipynb
@@ -676,9 +676,9 @@
         "Training loop는 Generator가 random noise를 input으로 받으면서부터 시작됩니다. seed는 이미지를 만들기 위해 쓰입니다. Discriminator는 진짜 이미지(Training set에 있는)와 가짜 이미지(Generator가 만든)를 구분하도록 학습합니다. 각 model의 loss를 각각 계산한뒤 gradient를 이용하여 Generator와 Discriminator를 업데이트합시다.\n",
         "\n",
         "1. Batch Size x Noise Dimension 크기의 noise를 생성합시다. (Hint: tf.random.normal)\n",
-        "2. 위에서 정의한 generator에 noise를 input으로 주어 generated_image를 생성합니다.\n",
-        "3. 위에서 정의한 discriminator에 진짜 이미지(images)를 넣어 real_output을 만듭니다.\n",
-        "4. 위에서 정의한 discriminator에 가짜 이미지를 넣어(generated_image) fake_output을 만듭니다.\n",
+        "2. 위에서 정의한 generator에 noise를 input으로 주어 generated_images를 생성합니다. (Hint: training=True를 설정해줍시다)\n",
+        "3. 위에서 정의한 discriminator에 진짜 이미지(images)를 넣어 real_output을 만듭니다. (Hint: training=True를 설정해줍시다)\n",
+        "4. 위에서 정의한 discriminator에 가짜 이미지를 넣어(generated_images) fake_output을 만듭니다. (Hint: training=True를 설정해줍시다)\n",
         "5. 위에서 정의한 generator_loss에 fake_output을 넣어 gen_loss를 계산합니다.\n",
         "5. real_output과 fake_output을 이용하여 disc_loss를 계산합니다.\n"
       ]
